--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ repositories {
 dependencies {
 
 	"org.springframework.boot:spring-boot-starter-security"
-	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation "io.jsonwebtoken:jjwt-impl:0.11.2"
